@@ -1,0 +1,21 @@
+//
+//  SelectorEvent.h
+//  
+//
+//  Created by Brian L Dorney on 04/07/16.
+//
+//
+
+#ifndef ____SelectorEvent__
+#define ____SelectorEvent__
+
+//C++ Includes
+#include <stdio.h>
+
+//Framework Includes
+#include "Selector.h"
+#include "UniformityUtilityTypes.h"
+
+//ROOT Includes
+
+#endif /* defined(____SelectorEvent__) */
