@@ -10,6 +10,7 @@
 
 using std::cout;
 using std::string;
+using std::vector;
 
 using namespace Uniformity;
 
@@ -18,26 +19,24 @@ SelectorCluster::SelectorCluster(){
     
 } //End Default Constructor
 
+//Filters an input vector<Uniformity::Cluster object based on the stored Uniformity::AnalysisSetupUniformity attribute
+vector<Cluster> SelectorCluster::filterClusters(std::vector<Cluster> vec_inputClust){
+    vector<Cluster> vec_retClust;
+    
+    //Could do this with vector::erase but believe that would be more inefficient (since container is re-organized everytime)
+    for (auto iterClust = vec_inputClust.begin(); iterClust != vec_inputClust.end(); ++iterClust) { //Loop Over input Clusters
+        if ( clusterPassesSelection( (*iterClust) ) ) { vec_retClust.push_back( *iterClust ); }
+    } //End Loop Over input Clusters
+    
+    return vec_retClust;
+} //End SelectorCluster::filterClusters()
+
 //Given an output ROOT file from AMORE (ROOTDATATYPE = CLUSTERS)
 //Applies the cluster selection and stores those selected clusters in inputDet
 //Input is a std::string storing the physical filename
 void SelectorCluster::setClusters(std::string &strInputRootFileName, Uniformity::DetectorMPGD &inputDet){
     //Variable Declaration
-    //int iFirstEvt = aSetupUniformity.iEvt_First;
-    //int iNEvt = aSetupUniformity.iEvt_Total;
-    
-    //Int_t iClustMulti;  //I cry a little inside because of this
-    //Int_t iClustPos_Y[3072];
-	//Int_t iClustSize[3072];
-	//Int_t iClustTimeBin[3072];
-    
-	//Float_t fClustPos_X[3072];
-    //Float_t fClustADC[3072];
-    
-    //Cluster clust;
-    
     TFile *file_ROOT = NULL;
-    //TTree *tree_Clusters = NULL;
     
     //Open this run's root file
     //------------------------------------------------------
@@ -52,95 +51,6 @@ void SelectorCluster::setClusters(std::string &strInputRootFileName, Uniformity:
         
         return;
     } //End Case: failed to load ROOT file
-    
-    //Simplied to just call the method below
-    /*tree_Clusters = (TTree*) file_ROOT->Get("TCluster");
-    
-    if ( nullptr == tree_Clusters ) { //Case: failed to load TTree
-        printClassMethodMsg("SelectorCluster","setClusters",("error while fetching: " + strInputRootFileName ).c_str() );
-        printClassMethodMsg("SelectorCluster","setClusters","\tTree returns nullptr; Exiting!!!");
-
-	return;
-    } //End Case: failed to load TTree
-    
-    //Initialize Tree Branch Address to retrieve the cluster information
-    //------------------------------------------------------
-    tree_Clusters->SetBranchAddress("nclust", &iClustMulti);
-    tree_Clusters->SetBranchAddress("clustPos",&fClustPos_X);
-    tree_Clusters->SetBranchAddress("clustSize",&iClustSize);
-    tree_Clusters->SetBranchAddress("clustADCs",&fClustADC);
-    tree_Clusters->SetBranchAddress("clustTimebin",&iClustTimeBin);
-    tree_Clusters->SetBranchAddress("planeID",&iClustPos_Y);
-    
-    if ( -1 == iNEvt ) { //Case: All Events
-        iFirstEvt = 0;
-        iNEvt = tree_Clusters->GetEntries();
-    } //End Case: All Events
-    else{ //Case: Event Range
-        if ( iFirstEvt > tree_Clusters->GetEntries() ) { //Case: Incorrect Event Range, 1st Event Requested Beyond All Events
-            printClassMethodMsg("SelectorCluster","setClusters", ("Error, First Event Requested as " + Timing::getString( aSetupUniformity.iEvt_First ) + " Greater Thant Total Number of Events " + Timing::getString( tree_Clusters->GetEntries() ) ).c_str() );
-            printClassMethodMsg("SelectorCluster","setClusters", "Exiting!!!");
-            return;
-        } //End Case: Incorrect Event Range, 1st Event Requested Beyond All Events
-        else if( (iFirstEvt + iNEvt) > tree_Clusters->GetEntries() ){
-            iNEvt = tree_Clusters->GetEntries() - iFirstEvt;
-        }
-        else if( iFirstEvt < 0){
-            iFirstEvt = 0;
-        }
-    } //End Case: Event Range
-    
-    //Get data event-by-event
-    //------------------------------------------------------
-    //for (int i=0; i < tree_Clusters->GetEntries(); ++i) {
-    for (int i=iFirstEvt; i < iNEvt; ++i) {
-        //Needed to implement a Hack
-        //First check to make sure the cluster multiplicity is within the selection
-        //Only then get the info on the clusters
-        
-        //Make sure we only read the number of clusters
-        tree_Clusters->SetBranchStatus("*",0);
-        tree_Clusters->SetBranchStatus("nclust",1);
-        
-        //Get the number of clusters
-        tree_Clusters->GetEntry(i);
-
-        //Output to the user some message that we are still running
-        if (i % 1000 == 0) cout<<"Cluster Selection; " <<i<<" Events Analyzed\n";
-        
-        //If the event fails to pass the selection; skip it
-        //---------------Event Selection---------------
-        //Cut on number of clusters
-        if ( !(aSetupUniformity.selClust.iCut_MultiMin < iClustMulti && iClustMulti < aSetupUniformity.selClust.iCut_MultiMax) ) continue;
-        
-        //Okay make sure we can read all branches
-        tree_Clusters->SetBranchStatus("*",1);
-
-        //Now get the remaining data
-        tree_Clusters->GetEntry(i);
-
-        //Loop Over the elements of the cluster array (yes it must be done like this due to how hte NTuple from AMORE is created)
-        //For each element create a cluster, and check if it passes the selection
-        for (int j=0; j < iClustMulti; ++j) { //Loop Over Number of Clusters
-            //Set the cluster info
-            clust.iPos_Y = iClustPos_Y[j];
-            clust.fPos_X = fClustPos_X[j];
-            
-            clust.fADC = fClustADC[j];
-            
-            clust.iSize = iClustSize[j];
-            
-            clust.iTimeBin = iClustTimeBin[j];
-            
-            //If the cluster fails to pass the selection; skip it
-            //---------------Cluster Selection---------------
-            if ( !clusterPassesSelection(clust) ) continue;
-            
-            //If a cluster makes it here, store it in the detector
-            inputDet.setCluster(clust);
-        } //End Loop Over Number of Clusters
-    } //End Loop Over "Events"
-    */
     
     //Calling setClusters
     //------------------------------------------------------
