@@ -3,9 +3,15 @@
 *                                                *
 *	CHANGELOG: CMS_GEM_Analysis_Framework        *
 *	VERSION: 1.0.12                              *
-*	LAST UPDATE: July 3 2016                     *
+*	LAST UPDATE: July 4 2016                     *
 *                                                *
 **************************************************
+
+Update: July 5th
+
+Update: July 4th 2016
+==================================================
+->Adding event struct to include/UniformityUtilityTypes.h
 
 Update: July 3rd 2016
 ==================================================
